[tool.poetry]
name = "dasi"
version = "0.0.10"
description = "Automated DNA assembly planner for Python"
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta"
]
readme = "README.md"
homepage = "https://github.com/jvrana/dasi-dna-design"
documentation = "https://jvrana.github.io/dasi-dna-design"

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.3"
tqdm = "^4.32"
sortedcontainers = "^2.1"
loggable-jdv = "^0.1.5"
uvloop = "^0.12.2"
nest_asyncio = "^1.0"
msgpack = "^0.6.1"
msgpack-numpy = "^0.4.4"
sympy = "^1.4"
pandas = "^0.25.1"
numpy = "^1.17"
biopython = "^1.74"
seaborn = "^0.9.0"
matplotlib = "^3.1"
frozendict = "^1.2"
primer3plus = "^1.0.5"
fire = "^0.1"
jsonschema = "^3.1"
more-itertools = "^8.0"
pyblastbio = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-benchmark = "^3.2"
pygal = "^2.4"
pygaljs = "^1.0"
dill = "^0.3.0"
jdna = "^0.1.4"
dictdiffer = "^0.8.0"
pre-commit = {version = "^1.17", optional = true}
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = {version = "^3.7", optional = true}

autodocsumm = {version = "^0.1.11", optional = true}
recommonmark = {version = "^0.6.0", optional = true}
nbsphinx = {version = "^0.4.2", optional = true}
sphinx_autodoc_typehints = {version = "^1.8", optional = true}
sphinx-jsonschema = {version = "^1.11", optional = true}
sphinx = {version = "^2.2", optional = true}
sphinx-bootstrap-theme = {version = "^0.7.1", optional = true}
flaky = "^3.6"
pycallgraph = "^1.0"

[tool.poetry.extras]
documentation = ["nbsphinx", "sphinx_autodoc_typehints", "sphinx-jsonschema", "sphinx", "sphinx-bootstrap-theme"]
styling = ["flake8", "black", "pre-commit"]

[tool.poetry.scripts]
dasi = 'dasi:command_line.main'

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
