[tool.poetry]
name = "dasi"
version = "0.2"
description = "Automated DNA assembly planner for Python"
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta"
]
readme = "README.md"
homepage = "https://github.com/jvrana/dasi-dna-design"
documentation = "https://jvrana.github.io/dasi-dna-design"

[tool.poetry.dependencies]
python = "^3.6.1"
networkx = "^2.3"
tqdm = "^4.32"
loggable-jdv = "^0.1.5"
msgpack = "^0.6.1"
msgpack-numpy = "^0.4.4"
sympy = "^1.4"
numpy = "^1.17"
biopython = "^1.78"
matplotlib = "^3.1"
frozendict = "^1.2"
jsonschema = "^3.1"
more-itertools = "^8.0"
primer3plus = "^1.0.8"
pandas = [
    {"version" = "^1.1.0", "python" = "^3.7"}
]

# these are really dev dependenciesad, but cannot
# be optional due to weird non-obvious reasons with Poetry
pre-commit = {version = "^1.17", optional = true}
flake8 = {version = "^3.7", optional = true}
autodocsumm = {version = "^0.1.11", optional = true}
recommonmark = {version = "^0.6.0", optional = true}
nbsphinx = {version = "^0.4.2", optional = true}
sphinx_autodoc_typehints = {version = "^1.8", optional = true}
sphinx-jsonschema = {version = "^1.11", optional = true}
sphinx = {version = "^2.2", optional = true}
sphinx-bootstrap-theme = {version = "^0.7.1", optional = true}
black = {version = "^20.8b1", optional = true}
pyblastbio = "^0.9"
jdna = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-benchmark = "^3.2"
dictdiffer = "^0.8.0"
flaky = "^3.6"
pytest-cov = "^2.10.1"

[tool.poetry.extras]
documentation = ["nbsphinx", "sphinx_autodoc_typehints", "sphinx-jsonschema", "sphinx", "sphinx-bootstrap-theme"]
styling = ["flake8", "black", "pre-commit"]

[tool.poetry.scripts]
dasi = 'dasi:command_line.main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
